--- a/style.css
+++ b/style.css
@@ -892,6 +892,20 @@ footer{
 
 
 
+/* .switcher {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+}
+.dark-mode {
+    background-color: black;
+    color: white; 
+}
+ */
+
+
+
 
 
 
