--- a/style.css
+++ b/style.css
@@ -1158,3 +1158,33 @@ footer{
         color: #333;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Change the avatar image in the header */
+.bpHeaderContentAvatarImage {
+    content: url('./img/aboutMe.jpg'); /* Change this to your icon URL */
+    border-radius: 50%; /* Keep it circular */
+}
+
+/* Change the avatar image in message containers */
+.bpMessageAvatarImage {
+    content: url('./img/aboutMe.jpg'); /* Change this to your icon URL */
+    border-radius: 50%; /* Keep it circular */
+}
