--- a/style.css
+++ b/style.css
@@ -1179,12 +1179,12 @@ footer{
 
 /* Change the avatar image in the header */
 .bpHeaderContentAvatarImage {
-    content: url('./img/aboutMe.jpg'); /* Change this to your icon URL */
+    content: url('./img/chatbot.png'); /* Change this to your icon URL */
     border-radius: 50%; /* Keep it circular */
 }
 
 /* Change the avatar image in message containers */
 .bpMessageAvatarImage {
-    content: url('./img/aboutMe.jpg'); /* Change this to your icon URL */
+    content: url('./img/chatbot.png'); /* Change this to your icon URL */
     border-radius: 50%; /* Keep it circular */
 }
